--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,14 @@
-body {
-  background: red;
+#calculator {
+  width: 500px;
+  height: 500px;
+  border: 5px solid #444444;
+}
+
+#readout {
+ height: 50px;
+ border: 3px solid #999999;
+}
+
+.button {
+
 }
