Set color and rough sizing for calculator

--- a/css/styles.css
+++ b/css/styles.css
@@ -1,10 +1,64 @@
 #calculator {
   width: 500px;
   height: 500px;
-  border: 5px solid #444444;
+  /* border: 5px solid #444444; */
+  font-family: Helvetica, sans-serif;
+  border-radius: 5px;
+  box-sizing: border-box;
+  margin: 0 auto;
+  margin-top: 200px;
+  font-size: 50px;
+  font-size: 16px;
 }
 
 #readout {
- height: 50px;
- border: 3px solid #999999;
+ height: 100px;
+ /* border: 3px solid #999999; */
+ background-color: rgb(41, 41, 41);
+ color: white;
+ text-align: right;
+}
+
+.operator, .digit {
+  box-sizing: inherit;
+  display: inline-block;
+  width: 119px;
+  height: 50px;
+}
+
+.digit {
+  background-color: rgb(224, 224, 224);
+  border: 1px solid rgb(124, 124, 124);
+}
+
+.zero {
+  width: 244px;
+}
+
+.operator, #equals {
+  background-color: rgb(245, 146, 62);
+  border: 1px solid rgb(124, 124, 124);
+}
+
+#equals {
+  width: 119px;
+  height: 50px;
+  display: inline-block;
+}
+
+#decimal {
+  display: inline-block;
+  width: 121px;
+  height: 50px;
+  background-color: rgb(224, 224, 224);
+  border: 1px solid rgb(124, 124, 124);
+}
+
+#clear {
+  box-sizing: inherit;
+  display: inline-block;
+  width: 372px;
+  height: 50px;
+  background-color: rgb(224, 224, 224);
+  border: 1px solid rgb(124, 124, 124);
 }
