--- a/css/styles.css
+++ b/css/styles.css
@@ -10,20 +10,24 @@
   font-size: 0;
 }
 
+#readout, .operator, .zero, .digit, #equals, #decimal, #clear {
+  font-size: 16px;
+}
+
 #readout {
  height: 100px;
  /* border: 3px solid #999999; */
  background-color: rgb(41, 41, 41);
  color: white;
  text-align: right;
+ font-size: 40px;
 }
 
 .operator, .digit {
   box-sizing: inherit;
   display: inline-block;
-  width: 24.5%;
+  width: 24.6%;
   height: 50px;
-  font-size: 16px;
 }
 
 .digit {
@@ -32,7 +36,7 @@
 }
 
 .zero {
-  width: 244px;
+  width: 49.6%;
 }
 
 .operator, #equals {
@@ -41,14 +45,14 @@
 }
 
 #equals {
-  width: 119px;
+  width: 24.5%;
   height: 50px;
   display: inline-block;
 }
 
 #decimal {
   display: inline-block;
-  width: 121px;
+  width: 24.7%;
   height: 50px;
   background-color: rgb(224, 224, 224);
   border: 1px solid rgb(124, 124, 124);
@@ -57,7 +61,7 @@
 #clear {
   box-sizing: inherit;
   display: inline-block;
-  width: 73.9%;
+  width: 74.6%;
   height: 50px;
   background-color: rgb(224, 224, 224);
   border: 1px solid rgb(124, 124, 124);
