--- a/css/styles.css
+++ b/css/styles.css
@@ -14,20 +14,30 @@
   font-size: 16px;
 }
 
+#buttons > * {
+  text-align: center;
+  box-sizing: border-box;
+  padding-top: 6%;
+  height: 80px;
+}
+
 #readout {
- height: 100px;
- /* border: 3px solid #999999; */
- background-color: rgb(41, 41, 41);
- color: white;
- text-align: right;
- font-size: 40px;
+  height: 100px;
+  /* border: 3px solid #999999; */
+  background-color: rgb(41, 41, 41);
+  color: white;
+  text-align: right;
+  font-size: 40px;
+  padding-top: 6%;
+  padding-right: 6%;
+  box-sizing: border-box;
+  border-top-left-radius: 15px;
+  border-top-right-radius: 15px;
 }
 
 .operator, .digit {
-  box-sizing: inherit;
   display: inline-block;
-  width: 24.6%;
-  height: 50px;
+  width: 25%;
 }
 
 .digit {
@@ -36,7 +46,8 @@
 }
 
 .zero {
-  width: 49.6%;
+  width: 50%;
+  border-bottom-left-radius: 15px;
 }
 
 .operator, #equals {
@@ -45,24 +56,22 @@
 }
 
 #equals {
-  width: 24.5%;
-  height: 50px;
+  width: 25%;
   display: inline-block;
+  border-bottom-right-radius: 15px;
 }
 
 #decimal {
   display: inline-block;
-  width: 24.7%;
-  height: 50px;
+  width: 25%;
   background-color: rgb(224, 224, 224);
   border: 1px solid rgb(124, 124, 124);
 }
 
 #clear {
-  box-sizing: inherit;
+  box-sizing: border-box;
   display: inline-block;
-  width: 74.6%;
-  height: 50px;
+  width: 75%;
   background-color: rgb(224, 224, 224);
   border: 1px solid rgb(124, 124, 124);
 }
