--- a/css/styles.css
+++ b/css/styles.css
@@ -22,18 +22,35 @@
   font-size: 30px;
 }
 
-#readout {
+#currentOperator, #readout {
   height: 100px;
-  /* border: 3px solid #999999; */
   background-color: rgb(41, 41, 41);
   color: white;
+  box-sizing: border-box;
+  display: inline-block;
+}
+
+#currentOperator {
+  padding-top: 8%;
+  float: left;
+  width: 20%;
+  border-top-left-radius: 15px;
+  font-size: 25px;
+  padding-left: 6%;
+}
+
+#readout {
+  float: right;
+  width: 80%;
   text-align: right;
   font-size: 40px;
-  padding-top: 6%;
   padding-right: 6%;
-  box-sizing: border-box;
-  border-top-left-radius: 15px;
   border-top-right-radius: 15px;
+  padding-top: 6%;
+}
+
+#buttons {
+  clear: both;
 }
 
 .operator, .digit {
@@ -54,6 +71,7 @@
 .operator, #equals {
   background-color: rgb(245, 146, 62);
   border: 1px solid rgb(124, 124, 124);
+  color: white;
 }
 
 #equals {
